# prefixopt

./: .gitignore  README.md  README_RU.md  pyproject.toml
.github/workflows/: tests.yml
src/prefixopt/: __init__.py  api.py  main.py
src/prefixopt/cli/: diff.py  exclude.py  filter.py  merge.py  optimize.py  stats.py  subnet.py
src/prefixopt/core/: pipeline.py
src/prefixopt/core/operations/: subtractor.py
src/prefixopt/data/: file_reader.py
tests/: test_api_and_new_features.py  test_prefixopt.py
