[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prefixopt"
version = "1.4.0"
description = "High-performance CLI tool for optimizing IP prefix lists"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "ReuxM13" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.4.0,<1.0.0",
    "rich>=10.0.0,<14.0.0",
    "ijson>=3.2.0"
]

[project.urls]
"Homepage" = "https://github.com/ReuxM13/prefixopt"
"Bug Tracker" = "https://github.com/ReuxM13/prefixopt/issues"

[project.scripts]
prefixopt = "prefixopt.main:app"

[tool.setuptools.packages.find]
where = ["src"]